--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,9 @@
         "php": "^7.4.0"
     },
 
-    "minimum-stability": "dev"
+    "autoload": {
+        "psr-4": {
+            "ianpatrick\\codeworker\\": "src"
+        }
+    }
 }
