--- a/composer.json
+++ b/composer.json
@@ -13,4 +13,10 @@
     "require": {
         "php": "^7.4.0"
     }
+
+    "autoload": {
+        "psr-4": {
+            "Codeworker\\codeworker\\": "classes"
+        }
+    }
 }
