--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
         "php": "^7.4.0"
     },
 
+    "minimum-stability": "stable",
+
     "autoload": {
         "psr-4": {
             "Codeworker\\codeworker\\": "classes"
