--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "php": "^7.4.0"
     },
 
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
 
     "autoload": {
         "psr-4": {
