--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ianpatrick/codeworker",
+    "name": "codeworker/codeworker",
     "description": "Component to reduce your typing in scripts",
     "license": "MIT",
     "authors": [
