--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,11 @@
 
     "require": {
         "php": "^7.0"
+    },
+
+    "autoload": {
+        "psr-4": {
+            "app\\native\\": "app/native"
+        }
     }
 }
