--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
 
     "autoload": {
         "psr-4": {
-            "app\\native\\": "app/native"
+            "app\\": "app/"
         }
     }
 }
