--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "codeworker/codeworker",
-    "description": "Project to improve your productivity at the time of development.",
+    "description": "The way to accelerate your WEB development.",
     "type": "project",
     "license": "MIT",
     "authors": [
@@ -11,8 +11,7 @@
     ],
     
     "require": {
-        "php": "^7.0",
-        "erusev/parsedown": "^1.7"
+        "php": "^7.0"
     },
 
     "autoload": {
