--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 /vendor/
 /node_modules/
-/crud/
 /app/Controllers/Crud.php
 /public/css/crud.css
-/view/crud/*
+/view/login.view.php
+/view/register.view.php
+/view/dashboard.view.php
 crud.sql
