Codeworker to Codew

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "codeworker/codeworker",
+    "name": "codew/codew",
     "description": "The way to accelerate your WEB development.",
     "type": "project",
     "license": "MIT",
