--- a/php/composer.json
+++ b/php/composer.json
@@ -11,8 +11,7 @@
     ],
     
     "require": {
-        "php": "^7.0.0",
-        "codew/complex": "1.0.*"
+        "php": "^7.0.0"
     },
 
     "autoload": {
