--- a/php/composer.json
+++ b/php/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "codew/codew",
-    "description": "The way to accelerate your WEB development.",
+    "description": "The way to speed up my WEB development",
     "type": "project",
     "license": "MIT",
     "authors": [
