--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "codew/codew",
-    "description": "The way to speed up my WEB development",
+    "description": "The way to speed up my PHP development",
     "type": "project",
     "license": "MIT",
     "authors": [
