--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Ian Patrick"
+            "name": "Ian Patrick",
+            "email": "contatoianpatrick@gmail.com"
         }
     ],
 
