--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
             "email": "contatoianpatrick@gmail.com"
         }
     ],
-
+    
+    "minimum-stability": "dev",
     "require": {
         "php": "^7.4.0"
     },
