--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
         "php": "^7.4.0"
     },
