--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,14 @@
             "email": "contatoianpatrick@gmail.com"
         }
     ],
-    
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
         "php": "^7.4.0"
     },
-
     "autoload": {
         "psr-4": {
             "App\\": "app/"
         }
     }
+
 }
