--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.4.0"
+        "php": "^7.4.0",
+        "league/plates": "^3.3",
+        "coffeecode/router": "^1.0"
     },
     "autoload": {
         "psr-4": {
