--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "require": {
         "php": "^7.4.0",
         "league/plates": "^3.3",
-        "bramus/router": "^1.5"
+        "bramus/router": "^1.5",
+        "erusev/parsedown": "^1.7"
     },
     "autoload": {
         "psr-4": {
