--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     },
     "autoload": {
         "psr-4": {
-            "Codew\\": "src/"
+            "Codew\\": "src/",
+            "Codew\\Native": "src/Native"
         }
     }
 }
