--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     "minimum-stability": "stable",
     "require": {
         "php": "^7.4.0",
-        "league/plates": "^3.3",
-        "bramus/router": "^1.5"
+        "league/plates": "3.3",
+        "bramus/router": "1.5"
     },
     "autoload": {
         "psr-4": {
