--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         }
     },
     "require": {
-        "league/climate": "3.6"
+        "league/climate": "3.6",
+        "bramus/router": "^1.5"
     }
 }
