--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,6 @@
         }
     },
     "require": {
-        "bramus/router": "^1.5",
-        "twig/twig": "^3.3"
+        "bramus/router": "^1.5"
     }
 }
